@@ -2,6 +2,7 @@ package networksTwo.application.handler;
 
 import com.fasterxml.jackson.databind.JsonNode;
 import networksTwo.application.service.ChatService;
+import networksTwo.domain.dto.ChatDto;
 import networksTwo.domain.model.Chat;
 import networksTwo.domain.model.Response;
 import networksTwo.domain.model.User;
@@ -14,6 +15,7 @@ import org.springframework.stereotype.Service;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 import static networksTwo.application.service.SessionService.getOutByUserId;
 import static networksTwo.utils.JwtUtils.getUserFromToken;
@@ -69,7 +71,12 @@ public class ChatHandler {
         getOutByUserId(user.getId())
                 .ifPresent(outputStream -> {
                             try {
-                                Response otherClient = new Response("chatUpdate", chatId.toString());
+                                Chat registeredChat = chatService.getById(chatId)
+                                        .orElseThrow(() -> new RuntimeException("Chat not found."));
+                                Response otherClient = new Response(
+                                        "chatUpdate",
+                                        new ChatDto(chatId, getTitle(registeredChat, owner.getUsername()))
+                                );
                                 byte[] responseBytes = MessagePackUtils.getInstance().writeValueAsBytes(otherClient);
                                 outputStream.write(responseBytes);
                                 outputStream.flush();
@@ -82,14 +89,17 @@ public class ChatHandler {
         return "Chat created successfully";
     }
 
-    public List<UUID> handleGetChats(JsonNode node) throws Exception {
+    public List<ChatDto> handleGetChats(JsonNode node) throws Exception {
         String token = node.path("token").asText();
         User owner = getUserFromToken(token, userService)
                 .orElseThrow(() -> new RuntimeException("User not found"));
 
         return owner.getChats().stream()
-                .map(Chat::getId)
-                .toList();
+                .map(chat -> {
+                    String title = getTitle(chat, owner.getUsername());
+                    return new ChatDto(chat.getId(), title);
+                })
+                .collect(Collectors.toList());
     }
 
     public String handleGetSingleChat(JsonNode node) throws Exception {
@@ -102,10 +112,12 @@ public class ChatHandler {
         Chat chat = chatService.getById(chatId)
                 .orElseThrow(() -> new RuntimeException("Chat not found with id: " + chatId));
 
-        List<String> filteredUsers = chat.getUsers().stream()
-                .map(User::getUsername)
-                .filter(username -> !username.equals(owner.getUsername()))
-                .toList();
+        return getTitle(chat, owner.getUsername());
+    }
+
+    private String getTitle(Chat chat, String ownerUsername){
+        List<String> filteredUsers = chatService.getTitlesByChatWithoutOwner(chat, ownerUsername)
+                .orElseThrow(() -> new RuntimeException("Filtered Users by chat not executed."));
 
         String title;
         if (filteredUsers.size() == 1) {
